testsuite/tests/typecheck/should_fail/T11948.stderr

T11948.hs:21:18: error:
    • Could not deduce (Bar (F zq) zq) arising from a use of ‘bar’
      from the context: Bar (Foo (F zq)) (Foo zq)
        bound by the type signature for:
                   bug :: forall zq. Bar (Foo (F zq)) (Foo zq) => Foo (F zq) -> Foo zq
        at T11948.hs:(19,1)-(20,38)
    • In the expression: bar sk :: Foo zq
      In an equation for ‘x’: x = bar sk :: Foo zq
      In the expression: let x = bar sk :: Foo zq in x
